--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -12,12 +12,15 @@ body {
 *:before {
     box-sizing: border-box;
 }
-// imports
+// imports and variables
 // ==========================================================================================
 @import "mixinsMain";
 @import "mediaMain";
 // @import "transitions";
-
+$fz__h1: calc(1.5em + 2vw);
+$fz__h2: calc(1em + 1.2vw);
+$fz__h3: calc(1em + 0.8vw);
+$fz__h4: calc(0.7em + 0.6vw);
 // social items
 // ==========================================================================================
 .social__item {
@@ -84,7 +87,6 @@ header {
         width: 70px;
     }
 }
-
 // navigation
 // ==========================================================================================
 .nav__container {
@@ -112,7 +114,7 @@ ul.topnav {
 ul.topnav{
     li a {
         @include links;
-        font-size: 16px;
+        font-size: $fz__h4;
         font-weight: 300;
         color: #C4C4C4;
         padding: 15px 16px;
@@ -131,12 +133,6 @@ ul.topnav{
         color: #D4E1F4;
     }
 }
-// .icon{
-//     text-decoration: none;
-//     list-style-type: none;  
-//     color: #D4E1F4;
-//     font-size: 50px;
-// }
 .responsive{
     background-color: #504C58;
     width: 100%;
@@ -178,7 +174,7 @@ ul.topnav{
 
 }
 .intro__wrapper {
-    // margin-top: 90px;
+
     width: 85%;
     height: 50%;
     display: flex;
@@ -188,10 +184,12 @@ ul.topnav{
     @include flex__column;
     span {
         color: #fff;
+        font-size: $fz__h2;
     }
     h1 {
         color: #D4E1F4;
         margin: 0;
+        font-size: $fz__h1;
     }
     .intro__main--button {
         width: 300px;
@@ -237,19 +235,19 @@ ul.topnav{
 // ==========================================================================================
 .main {
     width: 100%;
-    height: 110vh;
+    height: 100%;
     background-color: #D4E1F4;
-    @include flex__center;
 }
 .main__wrapper {
-    height: 90%;
+    margin: 0 auto;
+    padding: 60px 0;
     width: 85%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     h2 {
         color: #504C58;
-        margin-top: 35px;
+        font-size: $fz__h2;
     }
 }
 .main__content{
@@ -273,48 +271,51 @@ ul.topnav{
     }
     span{
         color: #E1680F;
-        font-size: 22px;
+        font-size: $fz__h3;
         font-weight: 700;
         text-align: center;
+        font-size: $fz__h3;
     }
     p{
         color: #504C58;
         text-align: center;
+        font-size: $fz__h4;
+        font-weight: 300;
+
     }
     img{
         height: 60px;
         padding-top: 10px;
     }
 }
-
 // price
 // ==========================================================================================
 .price {
     width: 100%;
-    max-width: 1440px;
-    height: 100vh;
+    height: 100%;
     background-color: #504C58;
-    @include flex__center;
 }
 .price__wrapper {
     background: url(../img/icons/price_calculator.svg)no-repeat;
     background-position: right center;
+    margin: 0 auto;
+    padding: 60px 0;
     width: 85%;
-    height: 85%;
     @include flex__column;
     background-color: #504C58;
     h2 {
-        font-size: 25px;
+        font-size: $fz__h2;
         color: #FE9C55;
         margin-bottom: 0;
     }
     span{
-        font-size: 15px;
+        font-size: $fz__h4;
         color: #C4C4C4;
+        padding: 20px;
     }
 }
 .price__container {
-    height: 300px;
+    height: 350px;
     width: 50%;
     box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
     display: flex;
@@ -332,7 +333,7 @@ ul.topnav{
             border-bottom: none;
             @include links;
             color: #C4C4C4;
-            font-size: 22px;
+            font-size: $fz__h4;
             &:nth-child(5){
                 border-bottom: 1px solid #46434C;
             }
@@ -348,21 +349,21 @@ ul.topnav{
     display: flex;
     flex-direction: column;
     span{
-        font-size: 15px;
-        color: #C4C4C4;        
+        font-size: $fz__h4;
+        color: #C4C4C4; 
+        padding-top: 20px;       
     }
     span:last-child{
-        font-size: 20px;
+        font-size: $fz__h3;
         color: #fff;
-        margin-top: 15px;
     }
 }
 .price__footer {
     display: flex;
     justify-content: space-between;
     button{
+        margin-top: 80px;
         font-size: 20px;
-        margin-top:20px;
         border: 1px solid #FE9C55;
         color: #fff;
         background: none;
@@ -383,25 +384,24 @@ ul.topnav{
 // ==========================================================================================
 .service{
     width: 100%;
-    height: 110vh;
+    height: 100%;
     background-color: #D4E1F4;
-    @include flex__center;
 }
 .service__wrapper{
-    margin-top: 35px;
-    height: 95%;
+    margin: 0 auto;
+    padding: 60px 0;
     width: 85%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     h2 {
         color: #504C58;
-        margin-top: 55px;
+        padding-bottom: 20px;
+        font-size: $fz__h2;
     }
 }
 .service__block--wrapper{
     width: 100%;
-    margin-bottom: 40px;
     display: flex;
     justify-content: space-around;
     .service__block{
@@ -417,7 +417,6 @@ ul.topnav{
         margin-top: -60px;
     }
 }
-
 .service__numbers{
     color: #fff;
     font-size: 110px;
@@ -431,14 +430,13 @@ ul.topnav{
         text-align: center;
         font-weight: 600;
         padding: 10px;
-
+        font-size: $fz__h3;
     }
     p{
         color: #504C58;
         padding: 25px;
         font-weight: 300;
-        // text-align: center;
-        line-height: 20px;
+        font-size: $fz__h4;
     }
     img{
         height: 110px;
@@ -448,27 +446,26 @@ ul.topnav{
 // ==========================================================================================
 .reviews{
     width: 100%;
-    height: 110vh;
-    @include flex__center;
+    height: 100%;
     .reviews__wrapper{
-        margin-top: 55px;
-        height: 90%;
+        margin: 0 auto;
+        padding: 60px 0;
+        width: 85%;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: space-between;
         h2 {
-            width: 85%;
             color: #E1680F;
-            // margin-top: 55px;
             text-align: left;
+            font-size: $fz__h2;
+            padding-bottom: 20px;
         }
         a{
             @include links;
             color: #E1680F;
-            width: 85%;
             text-align: left;
             margin-bottom: 50px;
+            font-size: $fz__h4;
         }
         a:hover{
             color: #504C58;
@@ -476,7 +473,6 @@ ul.topnav{
     }
 }
 .reviews__block--wrapper{
-    width: 85%;
     display: flex;
     justify-content: space-between;
     div{
@@ -486,18 +482,17 @@ ul.topnav{
             box-shadow: none;
             display: flex;
             flex-direction: column;
-            width: 90%;
             padding: 15px;
             span:first-child{
                 color: #E1680F;
-                font-size: 20px;
+                font-size: $fz__h3;
             }
             span:nth-child(2){
                 color: #C4C4C4;
             }
             p{
                 color: #504C58;
-                font-size: 14px;
+                font-size: $fz__h4;
                 font-weight: 300;
             }
         }
@@ -507,19 +502,18 @@ ul.topnav{
         margin-left: 20px;
         margin-top: -50px;
     }
-
 }
 // footer
 // ==========================================================================================
 .footer{
     width: 100%;
-    height: 110vh;
-    @include flex__center;
+    height: 100%;
     background-color: #504C58;    
 }
 .footer__wrapper{
+    margin: 0 auto;
+    padding: 60px 0;
     width: 85%;
-    height: 85%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -542,6 +536,7 @@ ul.topnav{
                     padding-left: 45px;
                     height: 27px;
                     display: flex;
+                    font-size: $fz__h4;
                     align-items: center;
                 }
                 span:nth-child(1){
@@ -585,13 +580,13 @@ ul.topnav{
         }
         #map{
             width: 100%;
-            height: 100%;
+            min-height: 400px;
         }
     }
     div:nth-child(3){
         display: flex;
         justify-content: center;
-        padding-top: 10px;
+        padding: 20px;
     }
     div:nth-child(4){
         display: flex;
@@ -618,11 +613,13 @@ ul.topnav{
         width: 100%;
         color: #D4E1F4;
         text-align: left;
+        font-size: $fz__h2;
+        padding-bottom: 20px;
     }
 }
 .footer_wrapper--contacts{
     display: flex;
-    height: 60%;
+    min-height: 400px;
     width: 100%;
     background-color: #504C58;
     box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
